# cross-device-data-transfer

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  libraries.sh  main.cpp  main.py
file/: file_utils.cpp  file_utils.h  file_utils.py  zip.cpp  zip.h  zip.py
install/: down.md
src/: main.cpp
src/file/: fcrud.cpp  tozip.cpp  zip.cpp  zip.h
src/user/: user_data.cpp  user_data.h
user/: user_data.cpp  user_data.h  user_profile.py  user_profile.txt
